# surgical

./: .gitignore  2  CMakeLists.txt  HenryTODO  \  kinfu_reconstruction.py
src/: \
src/clouds/: CMakeLists.txt  get_table.cpp  get_table.h  ground.cpp  ground.h  plane_finding.cpp  plane_finding.h  ply_pipeline.cpp  ply_pipeline.h  utils_pcl.cpp  utils_pcl.h
src/perception/: CMakeLists.txt  kinfu_reconstruction.cpp  poisson.mlx
src/simulation/: openravesupport.cpp
src/tests/: CMakeLists.txt  CMakeLists.txt.bak  bullet_test.cpp  test_cloth_grasping.cpp  test_cloth_grasping.cpp.bak  test_cloth_grasping.cpp.bak2  test_cloth_grasping.cpp.bak3  test_softbody.cpp
